Re-import FeedCredentials.strings

--- a/Interfaces/pt.lproj/FeedCredentials.strings
+++ b/Interfaces/pt.lproj/FeedCredentials.strings
@@ -1,18 +1,17 @@
-
-/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "32"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "32"; */
 "32.title" = "Cancelar";
 
-/* Class = "NSTextFieldCell"; title = "Nome:"; ObjectID = "33"; */
+/* Class = "NSTextFieldCell"; title = "Name:"; ObjectID = "33"; */
 "33.title" = "Nome:";
 
-/* Class = "NSTextFieldCell"; title = "O acesso a %@ necessita que disponibilize as suas credenciais"; ObjectID = "34"; */
+/* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
 "34.title" = "O acesso a %@ necessita que disponibilize as suas credenciais";
 
-/* Class = "NSTextFieldCell"; title = "Palavra-Passe:"; ObjectID = "37"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Palavra-Passe:";
 
 /* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
 "38.title" = "Log In";
 
-/* Class = "NSTextFieldCell"; title = "O nome de utilizador e palvra-passe que forneceu serão guardados para a próxima vez que actualizar esta subscrição."; ObjectID = "39"; */
+/* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "O nome de utilizador e palvra-passe que forneceu serão guardados para a próxima vez que actualizar esta subscrição.";
