--- a/Interfaces/sv.lproj/FeedCredentials.strings
+++ b/Interfaces/sv.lproj/FeedCredentials.strings
@@ -1,18 +1,17 @@
-
-/* Class = "NSButtonCell"; title = "Avbryt"; ObjectID = "32"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "32"; */
 "32.title" = "Avbryt";
 
-/* Class = "NSTextFieldCell"; title = "Namn:"; ObjectID = "33"; */
+/* Class = "NSTextFieldCell"; title = "Name:"; ObjectID = "33"; */
 "33.title" = "Namn:";
 
-/* Class = "NSTextFieldCell"; title = "Anslutning till %@ kräver att du anger inloggningsuppgifter"; ObjectID = "34"; */
+/* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
 "34.title" = "Anslutning till %@ kräver att du anger inloggningsuppgifter";
 
-/* Class = "NSTextFieldCell"; title = "Lösenord:"; ObjectID = "37"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Lösenord:";
 
-/* Class = "NSButtonCell"; title = "Logga in"; ObjectID = "38"; */
+/* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
 "38.title" = "Logga in";
 
-/* Class = "NSTextFieldCell"; title = "Användarnamnet och lösenordet du anger kommer att kommas ihåg till nästa gång du uppdaterar den här prenumerationen."; ObjectID = "39"; */
+/* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "Användarnamnet och lösenordet du anger kommer att kommas ihåg till nästa gång du uppdaterar den här prenumerationen.";
