--- a/Interfaces/zh-Hans.lproj/FeedCredentials.strings
+++ b/Interfaces/zh-Hans.lproj/FeedCredentials.strings
@@ -1,18 +1,17 @@
-
-/* Class = "NSButtonCell"; title = "取消"; ObjectID = "32"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "32"; */
 "32.title" = "取消";
 
-/* Class = "NSTextFieldCell"; title = "用户名:"; ObjectID = "33"; */
+/* Class = "NSTextFieldCell"; title = "Name:"; ObjectID = "33"; */
 "33.title" = "用户名:";
 
-/* Class = "NSTextFieldCell"; title = "您需要提供登陆信息才可以访问 %@ "; ObjectID = "34"; */
+/* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
 "34.title" = "您需要提供登陆信息才可以访问 %@ ";
 
-/* Class = "NSTextFieldCell"; title = "密码:"; ObjectID = "37"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "密码:";
 
-/* Class = "NSButtonCell"; title = "登陆"; ObjectID = "38"; */
+/* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
 "38.title" = "登陆";
 
-/* Class = "NSTextFieldCell"; title = "您所提供的用户名和密码将会被记录并且在下次更新频道时使用"; ObjectID = "39"; */
+/* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "您所提供的用户名和密码将会被记录并且在下次更新频道时使用";
