--- a/Interfaces/cs.lproj/FeedCredentials.strings
+++ b/Interfaces/cs.lproj/FeedCredentials.strings
@@ -1,18 +1,17 @@
-
-/* Class = "NSButtonCell"; title = "Zrušit"; ObjectID = "32"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "32"; */
 "32.title" = "Zrušit";
 
-/* Class = "NSTextFieldCell"; title = "Jméno:"; ObjectID = "33"; */
+/* Class = "NSTextFieldCell"; title = "Name:"; ObjectID = "33"; */
 "33.title" = "Jméno:";
 
-/* Class = "NSTextFieldCell"; title = "Přístup k položce %@ vyžaduje poskytnutí přihlašovacích údajů"; ObjectID = "34"; */
+/* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
 "34.title" = "Přístup k položce %@ vyžaduje poskytnutí přihlašovacích údajů";
 
-/* Class = "NSTextFieldCell"; title = "Heslo:"; ObjectID = "37"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Heslo:";
 
-/* Class = "NSButtonCell"; title = "Přihlásit se"; ObjectID = "38"; */
+/* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
 "38.title" = "Přihlásit se";
 
-/* Class = "NSTextFieldCell"; title = "Zadané uživatelské jméno a heslo bude uchováno pro příští obnovení tohoto odebírání."; ObjectID = "39"; */
+/* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "Zadané uživatelské jméno a heslo bude uchováno pro příští obnovení tohoto odebírání.";
