--- a/Interfaces/da.lproj/FeedCredentials.strings
+++ b/Interfaces/da.lproj/FeedCredentials.strings
@@ -1,18 +1,17 @@
-
-/* Class = "NSButtonCell"; title = "Afbryd"; ObjectID = "32"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "32"; */
 "32.title" = "Afbryd";
 
-/* Class = "NSTextFieldCell"; title = "Navn:"; ObjectID = "33"; */
+/* Class = "NSTextFieldCell"; title = "Name:"; ObjectID = "33"; */
 "33.title" = "Navn:";
 
-/* Class = "NSTextFieldCell"; title = "Adgang til &@ kræver at du giver dine log ind detaljer"; ObjectID = "34"; */
+/* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
 "34.title" = "Adgang til &@ kræver at du giver dine log ind detaljer";
 
-/* Class = "NSTextFieldCell"; title = "Kodeord:"; ObjectID = "37"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Kodeord:";
 
-/* Class = "NSButtonCell"; title = "Log ind"; ObjectID = "38"; */
+/* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
 "38.title" = "Log ind";
 
-/* Class = "NSTextFieldCell"; title = "Brugernavnet og kodeordet du skal angive vil blive husket til næste gang du opdaterer dette abonnement."; ObjectID = "39"; */
+/* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "Brugernavnet og kodeordet du skal angive vil blive husket til næste gang du opdaterer dette abonnement.";
