--- a/Interfaces/de.lproj/FeedCredentials.strings
+++ b/Interfaces/de.lproj/FeedCredentials.strings
@@ -1,18 +1,17 @@
-
-/* Class = "NSButtonCell"; title = "Abbrechen"; ObjectID = "32"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "32"; */
 "32.title" = "Abbrechen";
 
-/* Class = "NSTextFieldCell"; title = "Benutzername:"; ObjectID = "33"; */
+/* Class = "NSTextFieldCell"; title = "Name:"; ObjectID = "33"; */
 "33.title" = "Benutzername:";
 
-/* Class = "NSTextFieldCell"; title = "Der Zugriff auf %@ benötigt Benutzerdaten von Ihnen"; ObjectID = "34"; */
+/* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
 "34.title" = "Der Zugriff auf %@ benötigt Benutzerdaten von Ihnen";
 
-/* Class = "NSTextFieldCell"; title = "Passwort:"; ObjectID = "37"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Passwort:";
 
-/* Class = "NSButtonCell"; title = "Anmelden"; ObjectID = "38"; */
+/* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
 "38.title" = "Anmelden";
 
-/* Class = "NSTextFieldCell"; title = "Die Benutzerdaten werden für die nächsten Aktualisierungen des Abonnements gespeichert."; ObjectID = "39"; */
+/* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "Die Benutzerdaten werden für die nächsten Aktualisierungen des Abonnements gespeichert.";
