--- a/Interfaces/es.lproj/FeedCredentials.strings
+++ b/Interfaces/es.lproj/FeedCredentials.strings
@@ -1,18 +1,17 @@
-
-/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "32"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "32"; */
 "32.title" = "Cancelar";
 
-/* Class = "NSTextFieldCell"; title = "Nombre:"; ObjectID = "33"; */
+/* Class = "NSTextFieldCell"; title = "Name:"; ObjectID = "33"; */
 "33.title" = "Nombre:";
 
-/* Class = "NSTextFieldCell"; title = "El acceso a %@ requiere que proporcione las credenciales de inicio de sesión."; ObjectID = "34"; */
+/* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
 "34.title" = "El acceso a %@ requiere que proporcione las credenciales de inicio de sesión.";
 
-/* Class = "NSTextFieldCell"; title = "Contraseña:"; ObjectID = "37"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Contraseña:";
 
-/* Class = "NSButtonCell"; title = "Iniciar sesión"; ObjectID = "38"; */
+/* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
 "38.title" = "Iniciar sesión";
 
-/* Class = "NSTextFieldCell"; title = "El nombre de usuario y la contraseña serán recordados para la próxima vez que actualice esta suscripción."; ObjectID = "39"; */
+/* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "El nombre de usuario y la contraseña serán recordados para la próxima vez que actualice esta suscripción.";
