--- a/Interfaces/eu.lproj/FeedCredentials.strings
+++ b/Interfaces/eu.lproj/FeedCredentials.strings
@@ -1,18 +1,17 @@
-
-/* Class = "NSButtonCell"; title = "Ezeztatu"; ObjectID = "32"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "32"; */
 "32.title" = "Ezeztatu";
 
-/* Class = "NSTextFieldCell"; title = "Izena:"; ObjectID = "33"; */
+/* Class = "NSTextFieldCell"; title = "Name:"; ObjectID = "33"; */
 "33.title" = "Izena:";
 
-/* Class = "NSTextFieldCell"; title = "%@-ra sartzeko beharrezkoa da izena ematea"; ObjectID = "34"; */
+/* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
 "34.title" = "%@-ra sartzeko beharrezkoa da izena ematea";
 
-/* Class = "NSTextFieldCell"; title = "Pasahitza:"; ObjectID = "37"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Pasahitza:";
 
-/* Class = "NSButtonCell"; title = "Izena Eman"; ObjectID = "38"; */
+/* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
 "38.title" = "Izena Eman";
 
-/* Class = "NSTextFieldCell"; title = "Emandako erabiltzaile izena eta pasahitza gorde egingo dira harpidetza eguneratzean erabiltzeko."; ObjectID = "39"; */
+/* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "Emandako erabiltzaile izena eta pasahitza gorde egingo dira harpidetza eguneratzean erabiltzeko.";
