--- a/Interfaces/fr.lproj/FeedCredentials.strings
+++ b/Interfaces/fr.lproj/FeedCredentials.strings
@@ -1,18 +1,17 @@
-
-/* Class = "NSButtonCell"; title = "Annuler"; ObjectID = "32"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "32"; */
 "32.title" = "Annuler";
 
-/* Class = "NSTextFieldCell"; title = "Nom :"; ObjectID = "33"; */
+/* Class = "NSTextFieldCell"; title = "Name:"; ObjectID = "33"; */
 "33.title" = "Nom :";
 
-/* Class = "NSTextFieldCell"; title = "L'accès à %@ nécessite de vous identifier"; ObjectID = "34"; */
+/* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
 "34.title" = "L'accès à %@ nécessite de vous identifier";
 
-/* Class = "NSTextFieldCell"; title = "Mot de passe :"; ObjectID = "37"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Mot de passe :";
 
-/* Class = "NSButtonCell"; title = "S'identifier"; ObjectID = "38"; */
+/* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
 "38.title" = "S'identifier";
 
-/* Class = "NSTextFieldCell"; title = "Le nom d'utilisateur et le mot de passe fournis seront conservés pour le prochain accès à ce flux."; ObjectID = "39"; */
+/* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "Le nom d'utilisateur et le mot de passe fournis seront conservés pour le prochain accès à ce flux.";
