--- a/Interfaces/it.lproj/FeedCredentials.strings
+++ b/Interfaces/it.lproj/FeedCredentials.strings
@@ -1,18 +1,17 @@
-
-/* Class = "NSButtonCell"; title = "Annulla"; ObjectID = "32"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "32"; */
 "32.title" = "Annulla";
 
-/* Class = "NSTextFieldCell"; title = "Nome:"; ObjectID = "33"; */
+/* Class = "NSTextFieldCell"; title = "Name:"; ObjectID = "33"; */
 "33.title" = "Nome:";
 
-/* Class = "NSTextFieldCell"; title = "L'accesso a %@ richiede l'inserimento delle tue credenziali di login"; ObjectID = "34"; */
+/* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
 "34.title" = "L'accesso a %@ richiede l'inserimento delle tue credenziali di login";
 
 /* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Password:";
 
-/* Class = "NSButtonCell"; title = "Login"; ObjectID = "38"; */
+/* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
 "38.title" = "Login";
 
-/* Class = "NSTextFieldCell"; title = "Nome utente e password da te forniti saranno ricordati la prossima volta che aggiornerai questa iscrizione."; ObjectID = "39"; */
+/* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "Nome utente e password da te forniti saranno ricordati la prossima volta che aggiornerai questa iscrizione.";
