--- a/Interfaces/ko.lproj/FeedCredentials.strings
+++ b/Interfaces/ko.lproj/FeedCredentials.strings
@@ -1,18 +1,17 @@
-
-/* Class = "NSButtonCell"; title = "취소"; ObjectID = "32"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "32"; */
 "32.title" = "취소";
 
-/* Class = "NSTextFieldCell"; title = "이름:"; ObjectID = "33"; */
+/* Class = "NSTextFieldCell"; title = "Name:"; ObjectID = "33"; */
 "33.title" = "이름:";
 
-/* Class = "NSTextFieldCell"; title = "%@ 구독은 로그인을 요구합니다."; ObjectID = "34"; */
+/* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
 "34.title" = "%@ 구독은 로그인을 요구합니다.";
 
-/* Class = "NSTextFieldCell"; title = "암호:"; ObjectID = "37"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "암호:";
 
-/* Class = "NSButtonCell"; title = "로그인"; ObjectID = "38"; */
+/* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
 "38.title" = "로그인";
 
-/* Class = "NSTextFieldCell"; title = "입력한 사용자 이름과 암호는 다음에 이 구독을 갱신시 사용하기\n위해 기억됩니다."; ObjectID = "39"; */
-"39.title" = "입력한 사용자 이름과 암호는 다음에 이 구독을 갱신시 사용하기\n위해 기억됩니다.";
+/* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
+"39.title" = "입력한 사용자 이름과 암호는 다음에 이 구독을 갱신시 사용하기 위해 기억됩니다.";
