--- a/Interfaces/nl.lproj/FeedCredentials.strings
+++ b/Interfaces/nl.lproj/FeedCredentials.strings
@@ -1,18 +1,17 @@
-
-/* Class = "NSButtonCell"; title = "Annuleer"; ObjectID = "32"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "32"; */
 "32.title" = "Annuleer";
 
-/* Class = "NSTextFieldCell"; title = "Gebruikersnaam:"; ObjectID = "33"; */
+/* Class = "NSTextFieldCell"; title = "Name:"; ObjectID = "33"; */
 "33.title" = "Gebruikersnaam:";
 
-/* Class = "NSTextFieldCell"; title = "U dient een gebruikersnaam en wachtwoord op te geven om toegang te krijgen tot %@."; ObjectID = "34"; */
+/* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
 "34.title" = "U dient een gebruikersnaam en wachtwoord op te geven om toegang te krijgen tot %@.";
 
-/* Class = "NSTextFieldCell"; title = "Wachtwoord:"; ObjectID = "37"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Wachtwoord:";
 
-/* Class = "NSButtonCell"; title = "Log in"; ObjectID = "38"; */
+/* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
 "38.title" = "Log in";
 
-/* Class = "NSTextFieldCell"; title = "De opgegeven gebruikersnaam en wachtwoord zullen worden opgeslagen, zodat u deze niet nog eens hoeft op te geven."; ObjectID = "39"; */
+/* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "De opgegeven gebruikersnaam en wachtwoord zullen worden opgeslagen, zodat u deze niet nog eens hoeft op te geven.";
