--- a/Interfaces/pt-BR.lproj/FeedCredentials.strings
+++ b/Interfaces/pt-BR.lproj/FeedCredentials.strings
@@ -1,18 +1,17 @@
-
-/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "32"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "32"; */
 "32.title" = "Cancelar";
 
-/* Class = "NSTextFieldCell"; title = "Nome:"; ObjectID = "33"; */
+/* Class = "NSTextFieldCell"; title = "Name:"; ObjectID = "33"; */
 "33.title" = "Nome:";
 
-/* Class = "NSTextFieldCell"; title = "Acessar %@ requer que você entre suas credenciais"; ObjectID = "34"; */
+/* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
 "34.title" = "Acessar %@ requer que você entre suas credenciais";
 
-/* Class = "NSTextFieldCell"; title = "Senha:"; ObjectID = "37"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Senha:";
 
-/* Class = "NSButtonCell"; title = "Entrar"; ObjectID = "38"; */
+/* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
 "38.title" = "Entrar";
 
-/* Class = "NSTextFieldCell"; title = "O nome de usuário e senha fornecidos serão lembrados da próxima vez que você atualizar esta assinatura."; ObjectID = "39"; */
+/* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "O nome de usuário e senha fornecidos serão lembrados da próxima vez que você atualizar esta assinatura.";
