--- a/Interfaces/ru.lproj/FeedCredentials.strings
+++ b/Interfaces/ru.lproj/FeedCredentials.strings
@@ -1,18 +1,17 @@
-
-/* Class = "NSButtonCell"; title = "Отмена"; ObjectID = "32"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "32"; */
 "32.title" = "Отмена";
 
-/* Class = "NSTextFieldCell"; title = "Имя:"; ObjectID = "33"; */
+/* Class = "NSTextFieldCell"; title = "Name:"; ObjectID = "33"; */
 "33.title" = "Имя:";
 
-/* Class = "NSTextFieldCell"; title = "Для доступа к %@ требуется указать имя пользователя и пароль"; ObjectID = "34"; */
+/* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
 "34.title" = "Для доступа к %@ требуется указать имя пользователя и пароль";
 
-/* Class = "NSTextFieldCell"; title = "Пароль:"; ObjectID = "37"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Пароль:";
 
-/* Class = "NSButtonCell"; title = "Войти"; ObjectID = "38"; */
+/* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
 "38.title" = "Войти";
 
-/* Class = "NSTextFieldCell"; title = "Имя пользователя и пароль будут сохранены, так что вам не придется вводить их повторно"; ObjectID = "39"; */
+/* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "Имя пользователя и пароль будут сохранены, так что вам не придется вводить их повторно";
