--- a/Interfaces/tr.lproj/FeedCredentials.strings
+++ b/Interfaces/tr.lproj/FeedCredentials.strings
@@ -1,18 +1,17 @@
-
-/* Class = "NSButtonCell"; title = "İptal"; ObjectID = "32"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "32"; */
 "32.title" = "İptal";
 
-/* Class = "NSTextFieldCell"; title = "Ad:"; ObjectID = "33"; */
+/* Class = "NSTextFieldCell"; title = "Name:"; ObjectID = "33"; */
 "33.title" = "Ad:";
 
-/* Class = "NSTextFieldCell"; title = "%@ erişimi giriş kanıtlarını belirtmenizi gerektiriyor"; ObjectID = "34"; */
+/* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
 "34.title" = "%@ erişimi giriş kanıtlarını belirtmenizi gerektiriyor";
 
-/* Class = "NSTextFieldCell"; title = "Şifre:"; ObjectID = "37"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Şifre:";
 
-/* Class = "NSButtonCell"; title = "Giriş"; ObjectID = "38"; */
+/* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
 "38.title" = "Giriş";
 
-/* Class = "NSTextFieldCell"; title = "Bu üyelik için girmiş olduğunuz kullanıcı adı ve şifre, aboneliği bir sonraki kez yenilediğinizde hatırlanacak."; ObjectID = "39"; */
+/* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "Bu üyelik için girmiş olduğunuz kullanıcı adı ve şifre, aboneliği bir sonraki kez yenilediğinizde hatırlanacak.";
