--- a/Interfaces/uk.lproj/FeedCredentials.strings
+++ b/Interfaces/uk.lproj/FeedCredentials.strings
@@ -1,18 +1,17 @@
-
-/* Class = "NSButtonCell"; title = "Скасувати"; ObjectID = "32"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "32"; */
 "32.title" = "Скасувати";
 
-/* Class = "NSTextFieldCell"; title = "Ім'я:"; ObjectID = "33"; */
+/* Class = "NSTextFieldCell"; title = "Name:"; ObjectID = "33"; */
 "33.title" = "Ім'я:";
 
-/* Class = "NSTextFieldCell"; title = "Правили доступу до %@ вимагають введення імені користувача та паролю"; ObjectID = "34"; */
+/* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
 "34.title" = "Правили доступу до %@ вимагають введення імені користувача та паролю";
 
-/* Class = "NSTextFieldCell"; title = "Пароль:"; ObjectID = "37"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Пароль:";
 
-/* Class = "NSButtonCell"; title = "Увійти"; ObjectID = "38"; */
+/* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
 "38.title" = "Увійти";
 
-/* Class = "NSTextFieldCell"; title = "Ім'я користувача та пароль будуть збережені, отож вам не доведеться вводити їх знову."; ObjectID = "39"; */
+/* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "Ім'я користувача та пароль будуть збережені, отож вам не доведеться вводити їх знову.";
